// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`i18nDirective inserts correct translation html content with values 1`] = `"default-message word"`;

exports[`i18nDirective inserts correct translation html content with values 2`] = `"default-message anotherWord"`;

exports[`i18nDirective sanitizes message before inserting it to DOM 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default message, {value}"
  i18n-id="id"
  i18n-values="{ value: '<div ng-click=\\"dangerousAction()\\"></div>' }"
>
  Default message, 
  <div />
</div>
`;

exports[`i18nDirective sanitizes onclick attribute 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default {one} onclick=alert(1) {two} message"
  i18n-id="id"
  i18n-values="{ one: '<span', two: '>Press</span>' }"
>
  Default 
  <span>
    Press
  </span>
   message
</div>
`;

exports[`i18nDirective sanitizes onmouseover attribute 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default {value} message"
  i18n-id="id"
  i18n-values="{ value: '<span onmouseover=\\"alert(1)\\">Press</span>' }"
>
  Default 
  <span>
    Press
  </span>
   message
</div>
`;
